Branch da terceira aula de angular

--- a/src/app/components/first-component/first-component.component.html
+++ b/src/app/components/first-component/first-component.component.html
@@ -1,1 +1,5 @@
-<h2>MEU PRIMEIRO COMPONENTE!</h2>
+<h2>Nome: {{ name }}</h2>
+<h2>Idade: {{age}}</h2>
+<h2>Profissão: {{job}}</h2>
+<h2>Hobbie que mais gostar de fazer: {{hobbies[2]}}</h2>
+<h2>Carro: {{car.name}} - {{car.year}}</h2>
